src/objects/Address__c.object
<CustomObject>
    <description>Contains the Address information of the Customers.</description>
    <fields>
        <fullName>Address_Code__c</fullName>
        <label>Address Code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Last_Modified_Date__c</fullName>
        <description>Used by the Merge logic, added as part of Merge requirements</description>
        <label>Address Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_Line_1_Native__c</fullName>
        <label>Address Line 1 Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2_Native__c</fullName>
        <label>Address Line 2 Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_3__c</fullName>
        <label>Address Line 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Type_Last_Modified_Date__c</fullName>
        <description>Used by the Merge logic, added as part of Merge requirements</description>
        <label>Address Type Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Other Address 1</fullName>
                </value>
                <value>
                    <fullName>Other Address 2</fullName>
                </value>
                <value>
                    <fullName>Other Address 3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Block_Native__c</fullName>
        <label>Block Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Block__c</fullName>
        <label>Block</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City_Native__c</fullName>
        <label>City Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name_Native__c</fullName>
        <label>Company Name Native</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_Name__c</fullName>
        <label>Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Korea</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>Laos</fullName>
                </value>
                <value>
                    <fullName>Thailand</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Vietnam</fullName>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_By_EP_Transaction__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Created By EP Transaction</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Delivery_Point_ID__c</fullName>
        <label>Delivery Point ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Native__c</fullName>
        <label>Town Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <label>Town</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Hardcopy_Last_Modified_By__c</fullName>
        <label>FS Mail Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Hardcopy_Last_Modified_Date__c</fullName>
        <label>FS Mail Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Opt_In_Hardcopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FS Opt In Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Foreign_Nationals__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Foreign Nationals is a checkbox field needed for Thailand ,</description>
        <label>Foreign Nationals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hardcopy_Last_Modified_By__c</fullName>
        <label>Mail Last Modified By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardcopy_Last_Modified_Date__c</fullName>
        <label>Mail Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <label>HouseNumber</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <description>The language in which address is submitted.This is created for Thailand.</description>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
	IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
	IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;,
        IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,
        IF(ISPICKVAL($User.Market__c, &apos;MY&apos;), &apos;MY&apos;,
	IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;NA&apos;)
	)))))</defaultValue>
        <description>For JP users set to JP</description>
        <label>Market Discriminator</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, &apos;AU&apos;) ,&apos;AU&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;CN&apos;), &apos;CN&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;JP&apos;), &apos;JP&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;TH&apos;), &apos;TH&apos;,
IF(ISPICKVAL($User.Market__c, &apos;MY&apos;), &apos;MY&apos;, 
IF(ISPICKVAL($User.Market__c, &apos;KR&apos;), &apos;KR&apos;,&apos;&apos;))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>TH</fullName>
                </value>
                <value>
                    <fullName>MY</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Opt_In_Hardcopy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In Mail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preferred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Preferred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Province_Native__c</fullName>
        <label>Prefecture Native</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <label>Prefecture</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Hokkaido</fullName>
                </value>
                <value>
                    <fullName>Aomori</fullName>
                </value>
                <value>
                    <fullName>Iwate</fullName>
                </value>
                <value>
                    <fullName>Miyagi</fullName>
                </value>
                <value>
                    <fullName>Akita</fullName>
                </value>
                <value>
                    <fullName>Yamagata</fullName>
                </value>
                <value>
                    <fullName>Fukushima</fullName>
                </value>
                <value>
                    <fullName>Ibaraki</fullName>
                </value>
                <value>
                    <fullName>Tochigi</fullName>
                </value>
                <value>
                    <fullName>Gunma</fullName>
                </value>
                <value>
                    <fullName>Saitama</fullName>
                </value>
                <value>
                    <fullName>Chiba</fullName>
                </value>
                <value>
                    <fullName>Tokyo</fullName>
                </value>
                <value>
                    <fullName>Kanagawa</fullName>
                </value>
                <value>
                    <fullName>Niigata</fullName>
                </value>
                <value>
                    <fullName>Toyama</fullName>
                </value>
                <value>
                    <fullName>Ishikawa</fullName>
                </value>
                <value>
                    <fullName>Fukui</fullName>
                </value>
                <value>
                    <fullName>Yamanashi</fullName>
                </value>
                <value>
                    <fullName>Nagano</fullName>
                </value>
                <value>
                    <fullName>Gifu</fullName>
                </value>
                <value>
                    <fullName>Shizuoka</fullName>
                </value>
                <value>
                    <fullName>Aichi</fullName>
                </value>
                <value>
                    <fullName>Mie</fullName>
                </value>
                <value>
                    <fullName>Shiga</fullName>
                </value>
                <value>
                    <fullName>Kyoto</fullName>
                </value>
                <value>
                    <fullName>Osaka</fullName>
                </value>
                <value>
                    <fullName>Hyogo</fullName>
                </value>
                <value>
                    <fullName>Nara</fullName>
                </value>
                <value>
                    <fullName>Wakayama</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Dead Mail</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
                <value>
                    <fullName>Opt out</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_District__c</fullName>
        <label>Sub District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_Address__c</fullName>
        <label>Unnormalized Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Temp_ZipCode__c</fullName>
        <label>Unnormalized Post Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TitleOfHonor__c</fullName>
        <label>TitleOfHonor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>To Person</fullName>
                    <default>true</default>
                    <label>To Person</label>
                </value>
                <value>
                    <fullName>To Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Be_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>To Be Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_By_EP_Transactions__c</fullName>
        <description>The integration layer (EP) needs this field for defect handling and debugging.</description>
        <label>Updated By EP Transactions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Post Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isTestRunning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTestRunning</label>
        <type>Checkbox</type>
    </fields>
    <label>Address</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Address</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <recordTypes>
        <fullName>Company</fullName>
        <active>true</active>
        <description>Record type for company addresses.</description>
        <label>Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Dealer</fullName>
        <active>true</active>
        <description>Record type for dealer addresses.</description>
        <label>Dealer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual</fullName>
        <active>true</active>
        <description>Record type for individual addresses.</description>
        <label>Individual</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AddressLine1_NoOfDigit</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;) ,OR(RecordType.DeveloperName =&apos;Company&apos;,RecordType.DeveloperName =&apos;Individual&apos;),IF( LEN(  Address_Line_1__c  ) &gt; 50 ,true,false) )</errorConditionFormula>
        <errorDisplayField>Address_Line_1__c</errorDisplayField>
        <errorMessage>Address Line 1 should be less than or equal to 50 letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AddressLine1_NoOfDigit_TH</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,UPPER(MD__c) = &apos;TH&apos; ,IF( LEN(  Address_Line_1__c  ) &gt; 100 ,true,false) )</errorConditionFormula>
        <errorDisplayField>Address_Line_1__c</errorDisplayField>
        <errorMessage>Address Line 1 should be less than or equal to 100 characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AddressLine2_NoOfDigit</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;),OR(RecordType.DeveloperName =&apos;Company&apos;,RecordType.DeveloperName =&apos;Individual&apos;),IF( LEN( Address_Line_2__c ) &gt; 50 ,true,false))</errorConditionFormula>
        <errorMessage>Address Line 2 should be less than or equal to 50 letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AddressLine2_NoOfDigit_TH</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,UPPER(MD__c) = &apos;TH&apos;,IF( LEN( Address_Line_2__c ) &gt; 100 ,true,false))</errorConditionFormula>
        <errorMessage>Address Line 2 should be less than or equal to 50 letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_Market_Cannot_be_Changed</fullName>
        <active>true</active>
        <description>Market field of Address should be same as user&apos;s market field</description>
        <errorConditionFormula>AND(TEXT( Market__c ) != TEXT( $User.Market__c ) ,$Profile.Name != &apos;IntegrationAPI&apos;,NOT(isTestRunning__c))</errorConditionFormula>
        <errorDisplayField>Market__c</errorDisplayField>
        <errorMessage>You are allowed to create record for your home market only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Address_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;), ISPICKVAL(  Address_Type__c  ,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Address_Type__c</errorDisplayField>
        <errorMessage>Address Type is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Block_NoOfDigits</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;),OR(RecordType.DeveloperName =&apos;Company&apos;,RecordType.DeveloperName =&apos;Individual&apos;),IF( LEN( Block__c ) &gt; 12 ,true,false) )</errorConditionFormula>
        <errorMessage>Block should be less than or equal to 12 letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckedState</fullName>
        <active>true</active>
        <description>State (only if country is equal to Australia)</description>
        <errorConditionFormula>AND(ISPICKVAL(Country__c, &apos;Australia&apos;),
ISPICKVAL(Province__c, &apos;&apos;),
$Profile.Name != &apos;IntegrationAPI&apos; 
)</errorConditionFormula>
        <errorDisplayField>Province__c</errorDisplayField>
        <errorMessage>State is a mandatory fields when your Country is Australia.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>City_NoOfDigit</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;),OR(RecordType.DeveloperName =&apos;Company&apos;,RecordType.DeveloperName =&apos;Individual&apos;),IF( LEN( City__c ) &gt; 12 ,true,false) )</errorConditionFormula>
        <errorDisplayField>City__c</errorDisplayField>
        <errorMessage>City should be less than or equal to 12 letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CompanyName_NoOfDigits</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;),OR(RecordType.DeveloperName =&apos;Company&apos;,RecordType.DeveloperName =&apos;Individual&apos;),IF( LEN( Company_Name__c ) &gt; 50 ,true,false) )</errorConditionFormula>
        <errorMessage>Company Name should be less than or equal to 50 letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Name_Native_Kana</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(
OR(
ISBLANK(Company_Name_Native__c),
REGEX(Company_Name_Native__c, &quot;[ァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶ－ー]*&quot;))),$Profile.Name != &apos;IntegrationAPI&apos;, 
MD__c = &apos;JP&apos;)</errorConditionFormula>
        <errorDisplayField>Company_Name_Native__c</errorDisplayField>
        <errorMessage>It should be &quot;Kana&quot; characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Name_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISCHANGED(TitleOfHonor__c),ISNEW()),
ISPICKVAL(TitleOfHonor__c,&apos;To Company&apos;),
ISBLANK(Company_Name__c), 
$Profile.Name != &apos;IntegrationAPI&apos;,
OR(MD__c = &apos;JP&apos;,MD__c = &apos;KR&apos;)   
)</errorConditionFormula>
        <errorDisplayField>Company_Name__c</errorDisplayField>
        <errorMessage>Company name is required when TitleOfHonor is &apos;To Company&apos;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_Name_Single</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(REGEX(Company_Name_Native__c,&quot;[^\\x00-\\x7F]+&quot;)),
NOT(ISBLANK(Company_Name_Native__c)),
$Profile.Name != &apos;IntegrationAPI&apos;, 
OR(MD__c = &apos;JP&apos;,MD__c = &apos;KR&apos;))</errorConditionFormula>
        <errorDisplayField>Company_Name_Native__c</errorDisplayField>
        <errorMessage>Company name native should be in double byte.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>District_NoOfDigit</fullName>
        <active>true</active>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,OR(UPPER(MD__c) = &apos;JP&apos;,UPPER(MD__c) = &apos;KR&apos;),OR(RecordType.DeveloperName =&apos;Company&apos;,RecordType.DeveloperName =&apos;Individual&apos;),IF( LEN(  District__c  ) &gt; 18 ,true,false) )</errorConditionFormula>
        <errorDisplayField>District__c</errorDisplayField>
        <errorMessage>Town should be less than or equal to 18 letters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invalid_ZipCode</fullName>
        <active>true</active>
        <description>Post Code is not 7 digits long</description>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,
MD__c = &apos;JP&apos;, 
OR(ISCHANGED(ZipCode__c),ISNEW()), 
NOT(ISBLANK(ZipCode__c)),
NOT(REGEX(ZipCode__c,&quot;[0-9]{7}&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>ZipCode__c</errorDisplayField>
        <errorMessage>Please enter a 7 digit Zip code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBK_Invalid_ZipCode</fullName>
        <active>true</active>
        <description>This validation rule prevents users from entering invalid Zipcode/PostCode.</description>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;, 
MD__c = &apos;KR&apos;, 
OR(ISCHANGED(ZipCode__c)), 
NOT(ISBLANK(ZipCode__c)), 
NOT(REGEX(ZipCode__c,&quot;[0-9]{5}&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>ZipCode__c</errorDisplayField>
        <errorMessage>ZIP CODE should be minimum 5 digits and ONLY Numbers.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MBK_ZIP_CODE_is_mandatory</fullName>
        <active>true</active>
        <description>This validation rule ensures that Zipcode is entered mandatorily.</description>
        <errorConditionFormula>AND($Profile.Name != &apos;IntegrationAPI&apos;,
     OR(MD__c = &apos;JP&apos;,MD__c = &apos;KR&apos;),
     OR(ISCHANGED(ZipCode__c)),
     OR( ISBLANK(ZipCode__c),ISNULL(ZipCode__c) )
    )</errorConditionFormula>
        <errorDisplayField>ZipCode__c</errorDisplayField>
        <errorMessage>ZIPCODE is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Province_is_mandatory</fullName>
        <active>false</active>
        <description>Province__c is Mandatory while creating new Address</description>
        <errorConditionFormula>AND( $Profile.Name != &apos;IntegrationAPI&apos;,
MD__c = &apos;JP&apos;,
  ISPICKVAL(Province__c,&quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Province__c</errorDisplayField>
        <errorMessage>Province __c is Mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TitleOfHonor_is_Required</fullName>
        <active>true</active>
        <description>TitleOfHonor__c is null or blank</description>
        <errorConditionFormula>ISPICKVAL( TitleOfHonor__c , &apos;Null&apos;)|| ISPICKVAL( TitleOfHonor__c , &apos;&apos;) &amp;&amp; MD__c = &apos;JP&apos; &amp;&amp; $Profile.Name != &apos;IntegrationAPI&apos;</errorConditionFormula>
        <errorDisplayField>TitleOfHonor__c</errorDisplayField>
        <errorMessage>TitleOfHonor</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Town_Native_Kana</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(
OR(
ISBLANK(District_Native__c),
REGEX(District_Native__c, &quot;[ァアィイゥウェエォオカガキギクグケゲコゴサザシジスズセゼソゾタダチヂッツヅテデトドナニヌネノハバパヒビピフブプヘベペホボポマミムメモャヤュユョヨラリルレロヮワヰヱヲンヴヵヶ－ー]*&quot;))),$Profile.Name != &apos;IntegrationAPI&apos;, 
MD__c = &apos;JP&apos;)</errorConditionFormula>
        <errorDisplayField>District_Native__c</errorDisplayField>
        <errorMessage>It should be &quot;Kana&quot; characters.</errorMessage>
    </validationRules>
</CustomObject>